# reliability-predictive-maintenance-layer

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
config/: asset_profile.json  fault_catalog.json  maintenance_matrix.json
dashboard/: index.html
data/: README.md
deploy/: mosquitto.conf
docs/: alarm_rationalization.md  architecture.md  bom.md  commissioning_checklist.md  evidence_pack.md  fat_protocol.md  fault_tree.md  field_validation_protocol.md  fmea.md  interview_walkthrough.md  known_limitations.md  kpi_definition_sheet.md  maintenance_strategy.md  observability_stack.md  opcua_mqtt_integration.md  portfolio_presentation.md  portfolio_project_brief.md  project_completion_status.md  seeded_fault_root_cause_notes.md  traceability_matrix.md  validation_plan.md
docs/adr/: 0001-classical-features-before-ml.md  0002-robust-baseline-median-iqr.md  0003-static-dashboard-and-evidence-pack.md
grafana/: predictive_maintenance_dashboard.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: influxdb.yml
reports/: maintenance_case_report.md
scripts/: run_demo.ps1  run_demo.py
src/rpm_layer/: __init__.py  baseline.py  cli.py  config.py  dashboard.py  detector.py  exporters.py  features.py  models.py  monitor.py  quality.py  recommender.py  reporting.py  simulator.py  spool.py  streaming.py  validation.py
tests/: test_monitor.py  test_pipeline.py  test_quality_and_exports.py  test_streaming.py
