[project]
name = "industrial-rpm-layer"
version = "0.5.0"
description = "Reliability and predictive maintenance layer for an industrial motion or material-handling asset."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Industrial Automation Portfolio" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0"
]

[project.optional-dependencies]
mqtt = ["paho-mqtt>=2.1,<3"]

[project.scripts]
rpm-layer = "rpm_layer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
